test-cases/final-dump/generic_resource.exp
Error detected during preliminary processing of module generic_resource
[91mfinal-dump/generic_resource.wybe:1:1: Resources cannot be declaration with a generic type: list(?foo)
[0m
