test-cases/final-dump/generic_resource.wybe
resource foo:list(F00)